// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should have a table with single package data to install if one package was provided and not installed 1`] = `
.emotion-0:hover {
  color: black;
  fill: black;
}

.emotion-0 {
  fill: white;
}

.emotion-1:hover {
  color: black;
  fill: black;
}

.emotion-1 {
  fill: white;
}

<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeLarge MuiButton-sizeLarge emotion-0"
  >
    <span
      class="MuiButton-label"
    >
      Update package listing
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <table>
    <thead>
      <tr>
        <td>
          Name
        </td>
        <td>
          Actions
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          bar
        </td>
        <td>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall emotion-1"
            data-testid="barPackage-details"
          >
            <span
              class="MuiButton-label"
            >
              <svg
                class="svg-inline--fa"
                viewBox="0 0 512 640"
              >
                <path
                  d="this is an svg path"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall emotion-1"
            data-testid="barPackage-install"
          >
            <span
              class="MuiButton-label"
            >
              <svg
                class="svg-inline--fa"
                viewBox="0 0 512 640"
              >
                <path
                  d="this is an svg path"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Should have a table with single package data to install if one package was provided and uninstalled after clicking the button 1`] = `
.emotion-0:hover {
  color: black;
  fill: black;
}

.emotion-0 {
  fill: white;
}

.emotion-1:hover {
  color: black;
  fill: black;
}

.emotion-1 {
  fill: white;
}

<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeLarge MuiButton-sizeLarge emotion-0"
  >
    <span
      class="MuiButton-label"
    >
      Update package listing
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <table>
    <thead>
      <tr>
        <td>
          Name
        </td>
        <td>
          Actions
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          bar
        </td>
        <td>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall emotion-1"
            data-testid="barPackage-details"
          >
            <span
              class="MuiButton-label"
            >
              <svg
                class="svg-inline--fa"
                viewBox="0 0 512 640"
              >
                <path
                  d="this is an svg path"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall emotion-1"
            data-testid="barPackage-install"
          >
            <span
              class="MuiButton-label"
            >
              <svg
                class="svg-inline--fa"
                viewBox="0 0 512 640"
              >
                <path
                  d="this is an svg path"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Should have a table with single package data to update if one package was provided and installed 1`] = `
.emotion-0:hover {
  color: black;
  fill: black;
}

.emotion-0 {
  fill: white;
}

.emotion-1:hover {
  color: black;
  fill: black;
}

.emotion-1 {
  fill: white;
}

<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeLarge MuiButton-sizeLarge emotion-0"
  >
    <span
      class="MuiButton-label"
    >
      Update package listing
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <table>
    <thead>
      <tr>
        <td>
          Name
        </td>
        <td>
          Actions
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          bar
        </td>
        <td>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall emotion-1"
            data-testid="barPackage-details"
          >
            <span
              class="MuiButton-label"
            >
              <svg
                class="svg-inline--fa"
                viewBox="0 0 512 640"
              >
                <path
                  d="this is an svg path"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall emotion-1"
            data-testid="barPackage-update"
          >
            <span
              class="MuiButton-label"
            >
              <svg
                class="svg-inline--fa"
                viewBox="0 0 512 640"
              >
                <path
                  d="this is an svg path"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall emotion-1"
            data-testid="barPackage-uninstall"
          >
            <span
              class="MuiButton-label"
            >
              <svg
                class="svg-inline--fa"
                viewBox="0 0 512 640"
              >
                <path
                  d="this is an svg path"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Should have a table with single package data to update if one package was provided and installed after clicking the button 1`] = `
.emotion-0:hover {
  color: black;
  fill: black;
}

.emotion-0 {
  fill: white;
}

.emotion-1:hover {
  color: black;
  fill: black;
}

.emotion-1 {
  fill: white;
}

<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeLarge MuiButton-sizeLarge emotion-0"
  >
    <span
      class="MuiButton-label"
    >
      Update package listing
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <table>
    <thead>
      <tr>
        <td>
          Name
        </td>
        <td>
          Actions
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          bar
        </td>
        <td>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall emotion-1"
            data-testid="barPackage-details"
          >
            <span
              class="MuiButton-label"
            >
              <svg
                class="svg-inline--fa"
                viewBox="0 0 512 640"
              >
                <path
                  d="this is an svg path"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall emotion-1"
            data-testid="barPackage-update"
          >
            <span
              class="MuiButton-label"
            >
              <svg
                class="svg-inline--fa"
                viewBox="0 0 512 640"
              >
                <path
                  d="this is an svg path"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall emotion-1"
            data-testid="barPackage-uninstall"
          >
            <span
              class="MuiButton-label"
            >
              <svg
                class="svg-inline--fa"
                viewBox="0 0 512 640"
              >
                <path
                  d="this is an svg path"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Should have an empty table without package data 1`] = `
.emotion-0:hover {
  color: black;
  fill: black;
}

.emotion-0 {
  fill: white;
}

<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeLarge MuiButton-sizeLarge emotion-0"
  >
    <span
      class="MuiButton-label"
    >
      Update package listing
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <table>
    <thead>
      <tr>
        <td>
          Name
        </td>
        <td>
          Actions
        </td>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`Should switch to details view of dependency package after clicking the dependency in detail view 1`] = `
.emotion-0:hover {
  color: black;
  fill: black;
}

.emotion-0 {
  fill: white;
}

<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeLarge MuiButton-sizeLarge emotion-0"
  >
    <span
      class="MuiButton-label"
    >
      Return to package listing
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <h1>
    dependency
  </h1>
  <p>
    This is the dependency
  </p>
  <h2>
    Version
  </h2>
  <p>
    Available: 
  </p>
</div>
`;

exports[`Should switch to details view of package after clicking the button 1`] = `
.emotion-0:hover {
  color: black;
  fill: black;
}

.emotion-0 {
  fill: white;
}

<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeLarge MuiButton-sizeLarge emotion-0"
  >
    <span
      class="MuiButton-label"
    >
      Return to package listing
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <h1>
    bar
  </h1>
  <p>
    foo
  </p>
  <h2>
    Version
  </h2>
  <p>
    Available: 
  </p>
  <h2>
    Dependencies
  </h2>
  <ul>
    <li>
      dependency
    </li>
  </ul>
  <h2>
    Website for more information
  </h2>
  <p>
    <a
      href="https://mypkg.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      https://mypkg.com
    </a>
  </p>
</div>
`;

exports[`Should switch to details view of package after clicking the button and return to overview on click on back 1`] = `
.emotion-0:hover {
  color: black;
  fill: black;
}

.emotion-0 {
  fill: white;
}

.emotion-1:hover {
  color: black;
  fill: black;
}

.emotion-1 {
  fill: white;
}

<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeLarge MuiButton-sizeLarge emotion-0"
  >
    <span
      class="MuiButton-label"
    >
      Update package listing
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <table>
    <thead>
      <tr>
        <td>
          Name
        </td>
        <td>
          Actions
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          bar
        </td>
        <td>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall emotion-1"
            data-testid="barPackage-details"
          >
            <span
              class="MuiButton-label"
            >
              <svg
                class="svg-inline--fa"
                viewBox="0 0 512 640"
              >
                <path
                  d="this is an svg path"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall emotion-1"
            data-testid="barPackage-install"
          >
            <span
              class="MuiButton-label"
            >
              <svg
                class="svg-inline--fa"
                viewBox="0 0 512 640"
              >
                <path
                  d="this is an svg path"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
